--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/Users/aqibmiah/Desktop/MyDigitalMushaf/project/public/Screenshot 2025-01-19 at 16.36.51.png" />
+    <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Digital Mushaf</title>
   </head>
